--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-radio-group": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yeetcode": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
